--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 .game-canvas {
+  border: 1px dashed;
   margin: 100px auto auto auto;
   display: block;
 }
@@ -11,4 +12,5 @@
 #game {
   background: url('../lib/images/Board.png') no-repeat;
   background-position: bottom;
+  z-index: 0;
 }
