--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,19 @@
 .game-canvas,
 .gamepiece {
-  border: 2px dashed black;
   margin: auto;
   display: block;
-  position: absolute;
 }
 
 #game {
+  /*background: url('../lib/images/Board.png') no-repeat;*/
   background-color: #d3d3d3;
   background-position: bottom;
+  z-index: 1;
 }
+
+/*#gamepiece {
+  background: url('../lib/images/Board.png') no-repeat;
+  background-color: transparent;
+  background-position: bottom;
+  z-index: 999;
+}*/
