--- a/styles.css
+++ b/styles.css
@@ -41,15 +41,16 @@ h1 {
 
 
 .home-screen {
+  font-family: 'Open Sans', sans-serif;
   background: whitesmoke;
   color: black;
   text-align : center;
-  margin: auto;
   opacity: 0.9;
-  width: 650px;
-  font-size: 20px;
-  display: block;
+  width: 50%;
+  height: 20%;
+  padding: 10% 0;
+  font-size: 24px;
   position: absolute;
-  top: 60%;
-  left: 24.5%;
+  top: 33.5%;
+  left: 25%;
 }
